--- a/BookLists/Views/Home/Index.cshtml
+++ b/BookLists/Views/Home/Index.cshtml
@@ -13,13 +13,18 @@
     </script>
 }
 
-<div class="row">
-    <div class="col-md-12" data-bind="foreach: $root">
-        <h2 data-bind="text: Title"></h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
+<div class="row" data-bind="foreach: $root">
+    <div class="col-md-12" style="padding-top: 15px;">
+        <div style="padding: 10px;overflow: auto;background-color: rgb(221, 221, 221);">
+            <h2 data-bind="text: Title"></h2>
+            <!-- ko foreach: Books -->
+            <div style="display: inline-block;padding-top: 10px;" class="col-md-2">
+                <div style="padding: 5px;background-color: rgb(152, 173, 226);">
+                    <h4 data-bind="text: $data.ISBN"></h4>
+                    <p>The advantage of projection is you get only the data you need.</p>
+                </div>
+            </div>
+            <!-- /ko -->
+        </div>
     </div>
 </div>
